--- a/assets/main.css
+++ b/assets/main.css
@@ -60,6 +60,7 @@ html {
     --light-warning-block-border-color: #af8141;
     --light-warning-block-background-color: #f4eee6;
     --light-warning-block-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="%23af8141"><path d="M109-120q-11 0-20-5.5T75-140q-5-9-5.5-19.5T75-180l370-640q6-10 15.5-15t19.5-5q10 0 19.5 5t15.5 15l370 640q6 10 5.5 20.5T885-140q-5 9-14 14.5t-20 5.5H109Zm69-80h604L480-720 178-200Zm302-40q17 0 28.5-11.5T520-280q0-17-11.5-28.5T480-320q-17 0-28.5 11.5T440-280q0 17 11.5 28.5T480-240Zm0-120q17 0 28.5-11.5T520-400v-120q0-17-11.5-28.5T480-560q-17 0-28.5 11.5T440-520v120q0 17 11.5 28.5T480-360Zm0-100Z"/></svg>');
+    --light-theme-icon: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="black"><path d="M480-360q50 0 85-35t35-85q0-50-35-85t-85-35q-50 0-85 35t-35 85q0 50 35 85t85 35Zm0 80q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Zm326-268Z"/></svg>');
 
     --dark-background-color: #202020;
     --dark-deep-background-color: #1a1a1a;
@@ -118,6 +119,7 @@ html {
     --dark-warning-block-border-color: #ab9c6f;
     --dark-warning-block-background-color: #302b23;
     --dark-warning-block-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="%23ab9c6f"><path d="M109-120q-11 0-20-5.5T75-140q-5-9-5.5-19.5T75-180l370-640q6-10 15.5-15t19.5-5q10 0 19.5 5t15.5 15l370 640q6 10 5.5 20.5T885-140q-5 9-14 14.5t-20 5.5H109Zm69-80h604L480-720 178-200Zm302-40q17 0 28.5-11.5T520-280q0-17-11.5-28.5T480-320q-17 0-28.5 11.5T440-280q0 17 11.5 28.5T480-240Zm0-120q17 0 28.5-11.5T520-400v-120q0-17-11.5-28.5T480-560q-17 0-28.5 11.5T440-520v120q0 17 11.5 28.5T480-360Zm0-100Z"/></svg>');
+    --dark-theme-icon: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="%23f0f0f0"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Zm0-80q88 0 158-48.5T740-375q-20 5-40 8t-40 3q-123 0-209.5-86.5T364-660q0-20 3-40t8-40q-78 32-126.5 102T200-480q0 116 82 198t198 82Zm-10-270Z"/></svg>');
 
     --indent: 2.5em;
     --border-radius: 0.25em;
@@ -184,6 +186,7 @@ html {
         --warning-block-border-color: var(--light-warning-block-border-color);
         --warning-block-background-color: var(--light-warning-block-background-color);
         --warning-block-image: var(--light-warning-block-image);
+        --theme-icon: var(--light-theme-icon);
     }
 }
 
@@ -246,6 +249,7 @@ html {
         --warning-block-border-color: var(--dark-warning-block-border-color);
         --warning-block-background-color: var(--dark-warning-block-background-color);
         --warning-block-image: var(--dark-warning-block-image);
+        --theme-icon: var(--dark-theme-icon);
     }
 }
 
@@ -307,6 +311,7 @@ html.light {
     --warning-block-border-color: var(--light-warning-block-border-color);
     --warning-block-background-color: var(--light-warning-block-background-color);
     --warning-block-image: var(--light-warning-block-image);
+    --theme-icon: var(--light-theme-icon);
 }
 
 html.dark {
@@ -367,6 +372,7 @@ html.dark {
     --warning-block-border-color: var(--dark-warning-block-border-color);
     --warning-block-background-color: var(--dark-warning-block-background-color);
     --warning-block-image: var(--dark-warning-block-image);
+    --theme-icon: var(--dark-theme-icon);
 }
 
 /* END LIGHT AND DARK THEME */
@@ -1171,31 +1177,19 @@ warning-block intro-::before {
     display: inline-block;
     top: 1em;
     right: 1em;
+}
+
+#theme-icon {
+    display: block;
+    width: 2.5em;
+    height: 2.5em;
+    cursor: pointer;
+    background-image: var(--theme-icon);
+    background-size: contain;
     opacity: 0.25;
 }
 
-#settings:hover,
-#settings:focus {
+#theme-icon:hover,
+#theme-icon:focus {
     opacity: 1;
-}
-
-#settings svg {
-    width: 2em;
-    height: auto;
-    cursor: pointer;
-}
-
-/* THEME ICONS */
-
-html.dark #sync-theme-icon,
-html.light #sync-theme-icon {
-    display: none;
-}
-
-html:not(.dark) #dark-theme-icon {
-    display: none;
-}
-
-html:not(.light) #light-theme-icon {
-    display: none;
 }
